# fast-admin

./: README.md  pyproject.toml
fast_admin/: main.py
fast_admin/api/: __init__.py  auth.py  logs.py  permissions.py  roles.py  users.py
fast_admin/core/: config.py  database.py  dependencies.py  exceptions.py  logger.py  middleware.py  pagination.py  response.py  security.py
fast_admin/models/: __init__.py  base.py  logs.py  permission.py  role.py  user.py
fast_admin/schemas/: logs.py  permission.py  role.py  token.py  user.py
migrations/fast_admin/: 0_20240916004754_init.py  1_20240903203327_update.py  2_20240905143547_update.py  3_20240905143842_update.py
